fixed overflow issue

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,7 +1,7 @@
 
 body {
 	background: #A6B5CC;
-	overflow: hidden;
+	overflow: auto;
 	height: 100%;
 
 
